# DPNAndroidSample

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/deepano/dpnandroidsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: dp_api.h  dpnJniEntry.cpp
app/src/main/java/com/deepano/dpnandroidsample/: CoordBox.java  DeepanoApiFactory.java  DeepanoGLView.java  GLFrameRenderer.java  GLProgram.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/deepano/dpnandroidsample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
